--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^3.0.1",
-    "next": "14.2.6",
+    "dotenv": "^16.4.5",
+    "next": "^14.2.7",
     "openai": "^4.56.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.16.2",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.6",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
